# rf-result-analyzer

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  tasks.py
.github/workflows/: python.yml
demo/lib/: TrafficLibrary.py
demo/robot/: bdd.robot  library.resource  raw.robot  workflow.robot
genai/: analyzer_bot.py
src/RobotFrameworkResultAnalyzer/: __init__.py  listener.py
src/robotframework-result-analyzer/: __init__.py  listener.py
src/robotframework_result_analyzer/: __init__.py  listener.py
workflows/: python.yml
