[project]
name = "RobotFrameworkResultAnalyzer"
dynamic = ["version"]
description = "Robot Framework listener to generate understandable output of test results"
authors = [
    { name="Joonas Jauhinen", email="joonas.jauhianen@gmail.com" }
]
license = { file = "LICENSE" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
python_requires = ">=3.8"

[tool.pdm.scm]
source = "scm"

[tool.pdm.source]
include = ["src.robotframefork-result.aanlyzer.__init__.py"]
